--- a/resources/application.yml
+++ b/resources/application.yml
@@ -9,3 +9,13 @@ redis:
     - {addr: 192.168.56.131:6379}
     - {addr: 192.168.56.132:6379, readOnly: true}
     - {addr: 192.168.56.132:6380, readOnly: true}
+# 日志配置
+logrus:
+  level: trace
+  logFileName: register-go
+  filePath: logs/
+  # 30 * 24 * 60 * 60 一个月
+  maxAge: 2592000
+  # 24 * 60 * 60 一天
+  rotationTime: 86400
+
